# SmartClockIOT

./: platformio.ini
.github/: copilot-instructions.md
include/: LGFX_Setup.h  MqttService.h  TimerService.h  huge_app.csv  lv_conf.h
src/: MqttService.cpp  TimerService.cpp  main.cpp
src/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen3.c  ui_Screen3.h  ui_alarmRang.c  ui_alarmRang.h  ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_tempaturedisplay.c  ui_comp_tempaturedisplay.h  ui_events.c  ui_events.h  ui_font_HeadingTemp.c  ui_font_Heading_1.c  ui_font_Heading_2.c  ui_font_InterMedium.c  ui_font_InterSmall.c  ui_font_Setting.c  ui_font_alarmBig.c  ui_font_interTemp.c  ui_font_interTempHeader.c  ui_font_weatherText.c  ui_helpers.c  ui_helpers.h  ui_img_1548409061.c  ui_img_1728756278.c  ui_img_1728757303.c  ui_img_1728758328.c  ui_img_1728760626.c  ui_img_1728761651.c  ui_img_1728762676.c  ui_img_1728763701.c  ui_img_1728768049.c  ui_img_1728770363.c  ui_img_1728771388.c  ui_img_920895569.c  (+37 more)
